		-[Core/LifestyleScoping/Web/Wcf] Performance improvements for ScopeLifestyle derivatives. Resolving 
		 the scope is now done once per compiled delegate and resolving an scoped instance from that scope is 
		 also done just once per compiled delegate. (work item 20641)

	Bug fixes:
		-[Core] Concurrency bug fixed in collections registered with RegisterAllOpenGeneric. (work item 20681).


Version 2.4.1 (v2.4.1 RTM) 2014-01-14

	General description:
		This patch release fixes a bug in the core library concerning registration of generic types. This
		release also includes improvements to the Verify method.

	Improvements:
		-[Core] Improved performance of calls to Verify() and lowered the memory consumption of the container
		 caused by a call to Verify(). (work item 20083)
		-[Core] Verify now only creates instances that are root objects. This prevents users from having to 
		 write special case when extending the framework with methods such as RegisterWithContext.

	Bug fixes:
		-[Core] Registering generic types using RegisterOpenGeneric and RegisterDecorator resulted in a
		 stack overflow exception in case the generic type contained a type constraint that refered back to
		 the type (a.k.a. Curiously Recurring Template Pattern). (work item 20602).
		-[Core/LifetimeScoping/Web/Wcf] Scoped lifestyles did not ensure that all instances where disposed.
		 (work item 20579)


Version 2.4.0 (v2.4.0 RTM) 2013-12-08

	General description:
		The big new feature in this minor release is ther addition of a diagnostic API, which allows querying 
		the container for diagnostic information. Since version 2.0, Simple Injector has allowed developers to
		show diagnostic information while debugging. The new diagnostic API allows developers to request this 
		information programmatically. This allows writing integration tests that verify the correctness of the 
		container's configuration.
